_sass/base/_grid-style.scss
.grid {
  section {
    padding: 16px;
    border-radius: 2px;
    background-color: $section-bg;

    h1, h2, p, a {
      color: $font-colour;
      text-shadow: $font-shadow;
    }

    h1, h2 {
      font-family: 'Comfortaa', sans-serif;
      font-weight: 600;
    }

    h1 {
      @include font-size-rem(28px);
      display: inline-block;
      margin: 0 0 20px;
      line-height: 32px;
      position: relative;
      padding-right: 5px;
      speak: none;
      &::after {
        @include pseudo;
        top: 0;
        right: -2px;
        width: 3px;
        height: 1em;
        border-radius: 2px;
        background-color: $font-colour;
        animation: blink-caret 1.2s step-end infinite;
      }

      @include media('screen', '>=small') {
        @include font-size-rem(34px);
        margin: 0 0 26px;
        line-height: 38px;
      }
    }

    h2 {
      @include font-size-rem(26px);
      margin: 0 0 10px;
      line-height: 34px;
    }

    p {
      @include font-size-rem(16px);
      margin: 0 0 10px;
      line-height: 24px;
    }

    a {
      transition: opacity .2s ease;
      &:hover {
        @include opacity(.6);
      }
    }

    img {
      max-width: 100%;
    }

    *:last-child {
      margin-bottom: 0;
    }

    &.item-header {
      grid-area: header;
      @include media('screen', '>=small') {
        h1 + p {
          @include font-size-rem(20px);
          line-height: 32px;
        }
      }
    }
    &.item-work {
      grid-area: work;
      img {
        @include opacity(.8);
        width: 140px;
        margin-top: 10px;
      }
    }
    &.item-london {
      grid-area: london;
    }
    &.item-wfb {
      grid-area: wfb;
    }
    &.item-about {
      grid-area: about;
      img {
        display: block;
        width: 200px;
        height: 200px;
        margin: 0 auto 10px;
        float: none;
        border-radius: 50%;
        @include media('screen', '>=small') {
          display: inline-block;
          margin: 0 20px 10px 0;
          float: left;
        }
      }
    }
    &.item-skills {
      grid-area: skills;
    }
    &.item-social {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      grid-area: social;

      .social {
        display: grid;
        flex-grow: 2;
        width: 100%;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr;

        a {
          @include font-size-rem(30px);
          align-self: center;
          padding: 10px;
          text-decoration: none;
          justify-self: center;
        }

        @include media('screen', '>=small') {
          grid-template-columns: 1fr 1fr;
          grid-template-rows: 1fr 1fr;
        }
        @include media('screen', '>=medium') {
          grid-template-columns: 1fr 1fr;
          grid-template-rows: 1fr 1fr;
        }
        @include media('screen', '>=large') {
          grid-template-columns: 1fr 1fr 1fr 1fr;
          grid-template-rows: 1fr;
        }
      }
    }
    &.item-contact {
      grid-area: contact;
    }
  }
}

